--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           As of <span class="date">25/06/2022</span>
         </p>
       </div>
-      <p class="balance__value">£6000</p>
+      <p class="balance-value">£6000</p>
     </div>
 
     <!-- TRANSACTIONS -->
