--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <div class="add-transaction">
       <h2 class="section-heading">Add Transaction</h2>
       <form class="form">
-        <label class="form-label form-label-categories" for="transaction-categories">Categories</label>
+        <label class="form-label form-label-categories" for="transaction-categories">Category</label>
         <label class="form-label form-label-amount" for="transaction-amount">Amount</label>
         <select class="form-item transaction-categories">
           <option>Select</option>
@@ -96,7 +96,7 @@
           <option value="other">Other</option>
         </select>
         <input type="number" class="form-item transaction-amount">
-        <button class="form-item form-btn">Add</button>
+        <button class="form-item form-btn"><i class="fa-solid fa-circle-plus"></i> Add</button>
       </form>
     </div>
 
