--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
   <title>Bolt Finance</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto&family=Yellowtail&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css" integrity="sha384-/frq1SRXYH/bSyou/HUp/hib7RVN1TawQYja658FEOodR/FQBKVqT9Ol+Oz3Olq5" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+
+  <h1 class="logo">Bolt <i class="bolt fa-solid fa-bolt-lightning"></i><span class="logo-part2">Finance</span></h1>
 
   <main class="container-app">
 
@@ -44,10 +46,8 @@
     <!-- BALANCE -->
     <div class="balance">
       <div>
-        <p class="balance-label">Current balance</p>
-        <p class="balance-date">
-          As of <span class="date">25/06/2022</span>
-        </p>
+        <p class="balance-label">Balance</p>
+        <p class="balance-date">25/06/2022</p>
       </div>
       <p class="balance-value">£6000</p>
     </div>
@@ -96,7 +96,7 @@
           <option value="other">Other</option>
         </select>
         <input type="number" class="form-item transaction-amount">
-        <button class="form-item form-btn"><i class="fa-solid fa-circle-plus"></i> Add</button>
+        <button class="form-item form-btn"><i class="fa-solid fa-plus"></i></button>
       </form>
     </div>
 
