--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <label class="form-label form-label-categories" for="transaction-categories">Category</label>
         <label class="form-label form-label-amount" for="transaction-amount">Amount</label>
         <select class="form-item transaction-categories">
-          <option>Select</option>
+          <option id="preset-selection">Select</option>
           <option value="rent">Rent</option>
           <option value="bills">Bills</option>
           <option value="salary">Salary</option>
