--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
         <p class="balance-label">Balance</p>
         <p class="balance-date">25/06/2022</p>
       </div>
-      <p class="balance-value">£6000</p>
+      <div>
+        <p class="balance-value">£6000</p>
+      </div>
     </div>
 
     <!-- TRANSACTIONS -->
@@ -80,6 +82,17 @@
         <div class="transaction-value transaction-negative">-£320</div>
       </div>
     </div>
+
+    <!-- TRANSACTIONS SUMMARY -->
+    <div class="summary">
+      <div>
+        <p class="total-in transaction-positive">In <span class="label-summary label-summary-in">£1000</span></p>
+      </div>
+      <div>
+        <p class="total-out transaction-negative">Out <span class="label-summary label-summary-out">£1000</span></p>
+      </div>
+    </div>
+
 
     <!-- ADD NEW TRANSACTION -->
     <div class="add-transaction">
